metadata/force-app/main/default/objects/CustomName_wrTli__c/CustomName_wrTli__c.object-meta.xml
<CustomObject>
    <description>Description_WhbHt</description>
    <label>CustomLabel_MtUKg</label>
    <nameField>
        <label>CustomLabel_MtUKg</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_MtUKgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>