metadata/force-app/main/default/objects/CustomName_wrTli__c/fields/CustomField_jMvyT__c.field-meta.xml
<CustomField>
    <fullName>CustomField_jMvyT__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldevNpC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>