metadata/force-app/main/default/objects/CustomName_wrTli__c/fields/CustomField_PtAhI__c.field-meta.xml
<CustomField>
    <fullName>CustomField_PtAhI__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldUsJcC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>